tests/ui/rfc-2632-const-trait-impl/generic-bound.stderr
error: const `impl` for trait `Add` which is not marked with `#[const_trait]`
  --> $DIR/generic-bound.rs:16:15
   |
LL | impl<T> const std::ops::Add for S<T> {
   |               ^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to previous error

